# blueprintflow

./: .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  noxfile.py  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  initializeCommand.sh  onCreateCommand.sh  postStartCommand.sh
.docs/: mindmap.md
docs/: roadmap.md
notebooks/: bootstrap_data.ipynb  ipynb_util.py
scripts/: install_meta_packages.sh
src/blueprintflow/: _version.py
src/blueprintflow/core/: settings.py
src/blueprintflow/core/defaults/: settings.toml
src/blueprintflow/core/model/: embedded_data.py  settings.py
src/blueprintflow/core/models/: data.py  data_store.py  settings.py  store.py  tasks.py
src/blueprintflow/helpers/: cypher.py  log.py  store.py  sys_io.py  validations.py
src/blueprintflow/helpers/sys_io/: config.py
src/blueprintflow/helpers/xdg/: config.py  constants.py  data.py
src/blueprintflow/llm/: connector.py
src/blueprintflow/store/: lancedb_handler.py  manager.py  store_manager.py
src/blueprintflow/store/handlers/: _stmts.py  bpf_kuzu.py  kuzu.py  kuzu_handler.py  stmt.py
src/blueprintflow/utils/: log.py  validations.py
src/blueprintflow/utils/xdg/: config.py  constants.py  data.py
tests/: test_llm_connector.py
